WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87083
[V8] setDOMException() should return v8::Handle<v8::Value>()
https://bugs.webkit.org/show_bug.cgi?id=87083
Summary
[V8] setDOMException() should return v8::Handle<v8::Value>()
Kentaro Hara
Reported
2012-05-21 23:04:45 PDT
The following patterns are used here and there in V8 bindings: setDOMException(); return v8::Handle<v8::Value>(); and setDOMException(); return v8::Undefined(); By returning v8::Handle<v8::Value>() from setDOMException(), we can simplify the above patterns into this: return setDOMException();
Attachments
Patch
(15.77 KB, patch)
2012-05-21 23:08 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-05-21 23:08:53 PDT
Created
attachment 143195
[details]
Patch
Adam Barth
Comment 2
2012-05-21 23:52:27 PDT
Comment on
attachment 143195
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=143195&action=review
> Source/WebCore/bindings/v8/V8Proxy.cpp:592 > - return; > + return v8::Handle<v8::Value>();
Should we return v8::Local<v8::Value> ? I guess it doesn't matter for empty handles.
Kentaro Hara
Comment 3
2012-05-21 23:55:21 PDT
Comment on
attachment 143195
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=143195&action=review
>> Source/WebCore/bindings/v8/V8Proxy.cpp:592 >> + return v8::Handle<v8::Value>(); > > Should we return v8::Local<v8::Value> ? I guess it doesn't matter for empty handles.
It doesn't matter. V8::Local<v8::Value> can be casted to v8::Handle<v8::Value>. I used v8::Handle<v8::Value> just because throwError()s return v8::Handle<v8::Value>. Do you think V8::Local<v8::Value> is better?
Adam Barth
Comment 4
2012-05-21 23:56:09 PDT
I don't think it makes any difference for empty handles.
WebKit Review Bot
Comment 5
2012-05-22 00:41:28 PDT
Comment on
attachment 143195
[details]
Patch Clearing flags on attachment: 143195 Committed
r117926
: <
http://trac.webkit.org/changeset/117926
>
WebKit Review Bot
Comment 6
2012-05-22 00:41:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug