[V8] setDOMException() should return v8::Handle<v8::Value>() https://bugs.webkit.org/show_bug.cgi?id=87083

Reviewed by Adam Barth.

The following patterns are used here and there in V8 bindings:

    setDOMException();
    return v8::Handle<v8::Value>();

and

    setDOMException();
    return v8::Undefined();

By returning v8::Handle<v8::Value>() from setDOMException(), we can simplify the above patterns into this:

    return setDOMException();

This patch just replaces the code in CodeGeneratorV8.pm. I'll replace
all other custom bindings in a follow-up patch.

No tests. No change in behavior.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateSetDOMException):
(GenerateFunctionCallback):
(GenerateFunctionCallString):
* bindings/scripts/test/V8/V8TestEventTarget.cpp:
(WebCore::TestEventTargetV8Internal::itemCallback):
(WebCore::TestEventTargetV8Internal::dispatchEventCallback):
* bindings/scripts/test/V8/V8TestInterface.cpp:
(WebCore::TestInterfaceV8Internal::supplementalMethod2Callback):
* bindings/scripts/test/V8/V8TestObj.cpp:
(WebCore::TestObjV8Internal::attrWithGetterExceptionAttrGetter):
(WebCore::TestObjV8Internal::stringAttrWithGetterExceptionAttrGetter):
(WebCore::TestObjV8Internal::withScriptStateAttributeRaisesAttrGetter):
(WebCore::TestObjV8Internal::withScriptExecutionContextAttributeRaisesAttrGetter):
(WebCore::TestObjV8Internal::withScriptExecutionContextAndScriptStateAttributeRaisesAttrGetter):
(WebCore::TestObjV8Internal::methodThatRequiresAllArgsAndThrowsCallback):
(WebCore::TestObjV8Internal::methodWithExceptionCallback):
(WebCore::TestObjV8Internal::withScriptStateVoidExceptionCallback):
(WebCore::TestObjV8Internal::withScriptStateObjExceptionCallback):
(WebCore::TestObjV8Internal::withScriptExecutionContextAndScriptStateObjExceptionCallback):
(WebCore::TestObjV8Internal::getSVGDocumentCallback):
(WebCore::TestObjV8Internal::strictFunctionCallback):
* bindings/v8/V8Proxy.cpp:
(WebCore::V8Proxy::setDOMException):
* bindings/v8/V8Proxy.h:
(V8Proxy):


Canonical link: https://commits.webkit.org/104779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117926 268f45cc-cd09-0410-ab3c-d52691b4dbfc